<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PreferencesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAccount">

        <TextView
            android:id="@+id/textButtonUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Username"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textButtonUsernameInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_change"
            app:layout_constraintEnd_toEndOf="@+id/textButtonUsername"
            app:layout_constraintStart_toStartOf="@+id/textButtonUsername"
            app:layout_constraintTop_toBottomOf="@+id/textButtonUsername" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/roam_statusbar"
            app:layout_constraintTop_toBottomOf="@+id/textButtonUsernameInfo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtonIdentifyer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutButtonName">

        <TextView
            android:id="@+id/textButtonIdentifyer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="AccountIdentifyer"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textButtonIdentifyerInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_id_info"
            app:layout_constraintEnd_toEndOf="@+id/textButtonIdentifyer"
            app:layout_constraintStart_toStartOf="@+id/textButtonIdentifyer"
            app:layout_constraintTop_toBottomOf="@+id/textButtonIdentifyer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/roam_statusbar"
            app:layout_constraintTop_toBottomOf="@+id/textButtonIdentifyerInfo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtonAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutButtonIdentifyer">

        <TextView
            android:id="@+id/textButtonAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="About yourself"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textButtonAboutInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_info"
            app:layout_constraintEnd_toEndOf="@+id/textButtonAbout"
            app:layout_constraintStart_toStartOf="@+id/textButtonAbout"
            app:layout_constraintTop_toBottomOf="@+id/textButtonAbout" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/roam_statusbar"
            app:layout_constraintTop_toBottomOf="@+id/textButtonAboutInfo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/roam_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageUserPhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageUserPhoto"
            app:layout_constraintTop_toTopOf="@+id/imageUserPhoto" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="234dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:entries="@array/statuses"
            app:layout_constraintBottom_toBottomOf="@+id/imageUserPhoto"
            app:layout_constraintStart_toStartOf="@+id/textUsername"
            app:layout_constraintTop_toBottomOf="@+id/textUsername" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/account"
        android:textColor="@color/roam_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageButton
        android:id="@+id/buttonChangePhoto"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/textAccount"
        app:layout_constraintEnd_toEndOf="@+id/textAccount"
        app:layout_constraintTop_toTopOf="@+id/textAccount"
        tools:src="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>